add seo to my website

--- a/index.html
+++ b/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-      <title>Ali Pakdelnia - Full Stack .NET Developer</title>
-    <meta content="Full Stack .NET Developer with 10+ years of experience in .NET Core, Android, Angular, and modern web technologies" name="description">
-    <meta content="Full Stack Developer, .NET Core, Android, Angular, C#, Kotlin, TypeScript" name="keywords">
+  
+  <!-- SEO Meta Tags -->
+  <title>علی پاکدل نیا | برنامه‌نویس فول استک | توسعه‌دهنده اندروید | تهران</title>
+  <meta name="description" content="علی پاکدل نیا - برنامه‌نویس فول استک و توسعه‌دهنده اندروید در تهران. متخصص در .NET Core، Kotlin، React و Angular. ۵ سال تجربه در توسعه نرم‌افزار.">
+  <meta name="keywords" content="علی پاکدل نیا, علی پاکدل, پاکدل نیا, پاکدل, برنامه‌نویس فول استک, توسعه‌دهنده اندروید, برنامه‌نویس تهران, .NET Core, Kotlin, React, Angular, فریلنسر برنامه‌نویس">
+  <meta name="author" content="علی پاکدل نیا">
+  <meta name="robots" content="index, follow">
+  
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="علی پاکدل نیا | برنامه‌نویس فول استک و توسعه‌دهنده اندروید">
+  <meta property="og:description" content="علی پاکدل نیا - برنامه‌نویس فول استک و توسعه‌دهنده اندروید در تهران. متخصص در .NET Core، Kotlin، React و Angular.">
+  <meta property="og:image" content="https://alipakdelnia.github.io/assets/img/my-profile-img.jpg">
+  <meta property="og:url" content="https://alipakdelnia.github.io/">
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="fa_IR">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="علی پاکدل نیا | برنامه‌نویس فول استک و توسعه‌دهنده اندروید">
+  <meta name="twitter:description" content="علی پاکدل نیا - برنامه‌نویس فول استک و توسعه‌دهنده اندروید در تهران">
+  <meta name="twitter:image" content="https://alipakdelnia.github.io/assets/img/my-profile-img.jpg">
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://alipakdelnia.github.io/">
+  
+  <!-- Language Alternates -->
+  <link rel="alternate" hreflang="fa" href="https://alipakdelnia.github.io/">
+  <link rel="alternate" hreflang="en" href="https://alipakdelnia.github.io/">
+  <link rel="alternate" hreflang="x-default" href="https://alipakdelnia.github.io/">
+
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="manifest.json">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -26,6 +55,99 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/rtl.css" rel="stylesheet">
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "علی پاکدل نیا",
+    "alternateName": ["Ali Pakdelnia", "علی پاکدل", "پاکدل نیا"],
+    "jobTitle": "برنامه‌نویس فول استک و توسعه‌دهنده اندروید",
+    "description": "علی پاکدل نیا - برنامه‌نویس فول استک و توسعه‌دهنده اندروید در تهران با ۵ سال تجربه در توسعه نرم‌افزار",
+    "url": "https://alipakdelnia.github.io/",
+    "image": "https://alipakdelnia.github.io/assets/img/my-profile-img.jpg",
+    "email": "ali.pakdelnia77@gmail.com",
+    "telephone": "+989909601225",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "تهران",
+      "addressCountry": "ایران"
+    },
+    "sameAs": [
+      "https://github.com/alipakdelnia",
+      "https://linkedin.com/in/ali-pakdelnia"
+    ],
+    "knowsAbout": [
+      "Full Stack Development",
+      "Android Development",
+      "Kotlin Programming",
+      ".NET Core",
+      "React",
+      "Angular",
+      "JavaScript",
+      "TypeScript"
+    ],
+    "worksFor": [
+      {
+        "@type": "Organization",
+        "name": "Beniamin Company"
+      },
+      {
+        "@type": "Organization", 
+        "name": "Saze Rahavard Dena"
+      }
+    ],
+    "alumniOf": {
+      "@type": "EducationalOrganization",
+      "name": "Isfahan University of Technology"
+    }
+  }
+  </script>
+
+  <!-- Additional Structured Data for Website -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "علی پاکدل نیا - برنامه‌نویس فول استک",
+    "url": "https://alipakdelnia.github.io/",
+    "description": "علی پاکدل نیا - برنامه‌نویس فول استک و توسعه‌دهنده اندروید در تهران",
+    "author": {
+      "@type": "Person",
+      "name": "علی پاکدل نیا"
+    },
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://alipakdelnia.github.io/?s={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+
+  <!-- Organization Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "علی پاکدل نیا - خدمات برنامه‌نویسی",
+    "url": "https://alipakdelnia.github.io/",
+    "logo": "https://alipakdelnia.github.io/assets/img/my-profile-img.jpg",
+    "description": "خدمات برنامه‌نویسی فول استک و توسعه اندروید توسط علی پاکدل نیا",
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+989909601225",
+      "contactType": "customer service",
+      "email": "ali.pakdelnia77@gmail.com"
+    },
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "تهران",
+      "addressCountry": "ایران"
+    }
+  }
+  </script>
 
   <!-- =======================================================
   * Template Name: Ali Pakdelnia Portfolio
@@ -42,13 +164,13 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
+      <img src="assets/img/my-profile-img.jpg" alt="علی پاکدل نیا - برنامه‌نویس فول استک" class="img-fluid rounded-circle">
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
       <!-- Uncomment the line below if you also wish to use an image logo -->
       <!-- <img src="assets/img/logo.png" alt=""> -->
-      <h1 class="sitename">Ali Pakdelnia</h1>
+      <h1 class="sitename">علی پاکدل نیا</h1>
     </a>
 
     <div class="social-links text-center">
@@ -59,15 +181,15 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
-        <li><a href="#skills"><i class="bi bi-hdd-stack navicon"></i> Technical Skills</a></li>
-        <li><a href="#soft-skills"><i class="bi bi-people navicon"></i> Soft Skills</a></li>
-        <li><a href="#languages"><i class="bi bi-translate navicon"></i> Languages</a></li>
-        <li><a href="#services"><i class="bi bi-gear navicon"></i> Services</a></li>
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
+        <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>خانه</a></li>
+        <li><a href="#about"><i class="bi bi-person navicon"></i> درباره من</a></li>
+        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> رزومه</a></li>
+        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> نمونه کارها</a></li>
+        <li><a href="#skills"><i class="bi bi-hdd-stack navicon"></i> مهارت‌های فنی</a></li>
+        <li><a href="#soft-skills"><i class="bi bi-people navicon"></i> مهارت‌های نرم</a></li>
+        <li><a href="#languages"><i class="bi bi-translate navicon"></i> زبان‌ها</a></li>
+        <li><a href="#services"><i class="bi bi-gear navicon"></i> خدمات</a></li>
+        <li><a href="#contact"><i class="bi bi-envelope navicon"></i> تماس</a></li>
       </ul>
     </nav>
 
@@ -78,11 +200,11 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
+      <img src="assets/img/hero-bg.jpg" alt="علی پاکدل نیا - برنامه‌نویس فول استک" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2>Ali Pakdelnia</h2>
-        <p>I'm a <span class="typed" data-typed-items="Full Stack Developer, Android Developer, .NET Developer, Problem Solver, Freelancer">Full Stack Developer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <h2>علی پاکدل نیا</h2>
+        <p>من یک <span class="typed" data-typed-items="برنامه‌نویس فول استک, توسعه‌دهنده اندروید, برنامه‌نویس .NET, حل‌کننده مشکلات, فریلنسر">برنامه‌نویس فول استک</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
@@ -92,41 +214,41 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>About</h2>
-        <p>Experienced Full Stack Developer with expertise in both Android and web development. Currently working with multiple companies and accepting freelance projects. I specialize in creating comprehensive solutions across all platforms.</p>
+        <h2>درباره علی پاکدل نیا</h2>
+        <p>علی پاکدل نیا - برنامه‌نویس فول استک با تجربه در توسعه اندروید و وب. در حال حاضر با چندین شرکت همکاری می‌کنم و پروژه‌های فریلنسری می‌پذیرم. من در ایجاد راه‌حل‌های جامع در تمام پلتفرم‌ها تخصص دارم.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/my-profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/my-profile-img.jpg" class="img-fluid" alt="علی پاکدل نیا - برنامه‌نویس فول استک تهران">
           </div>
           <div class="col-lg-8 content">
-            <h2>Full Stack Developer &amp; Android Specialist</h2>
+            <h2>برنامه‌نویس فول استک و متخصص اندروید</h2>
             <p class="fst-italic py-3">
-              Experienced Full Stack Developer working with multiple companies and accepting freelance projects. Strong proficiency in both web and mobile development, creating comprehensive solutions across all platforms.
+              علی پاکدل نیا - برنامه‌نویس فول استک با تجربه که با چندین شرکت همکاری می‌کند و پروژه‌های فریلنسری می‌پذیرد. مهارت قوی در توسعه وب و موبایل، ایجاد راه‌حل‌های جامع در تمام پلتفرم‌ها.
             </p>
             <div class="row">
                           <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>26</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>ali.pakdelnia77@gmail.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+989909601225</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>Tehran, Iran</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>سن:</strong> <span>۲۶</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>ایمیل:</strong> <span>ali.pakdelnia77@gmail.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>تلفن:</strong> <span>+989909601225</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>موقعیت:</strong> <span>تهران، ایران</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>alipakdelnia.github.io</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>وب‌سایت:</strong> <span>alipakdelnia.github.io</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>GitHub:</strong> <span>github.com/alipakdelnia</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn:</strong> <span>linkedin.com/in/ali-pakdelnia</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Status:</strong> <span>Freelance Available</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>وضعیت:</strong> <span>در دسترس برای فریلنسری</span></li>
               </ul>
             </div>
             </div>
                           <p class="py-3">
-                With a background in mechatronics engineering and extensive experience in software development, I bring a holistic approach to creating comprehensive solutions. Currently working as a Full Stack Developer with multiple companies, I have collaborated on diverse projects across web and mobile platforms, refining my problem-solving skills and cultivating expertise in both frontend and backend development.
+                علی پاکدل نیا با پیشینه مهندسی مکاترونیک و تجربه گسترده در توسعه نرم‌افزار، رویکردی جامع برای ایجاد راه‌حل‌های کامل ارائه می‌دهد. در حال حاضر به عنوان برنامه‌نویس فول استک با چندین شرکت همکاری می‌کنم و در پروژه‌های متنوع وب و موبایل مشارکت داشته‌ام، مهارت‌های حل مسئله را بهبود داده‌ام و تخصص در توسعه فرانت‌اند و بک‌اند را پرورش داده‌ام.
               </p>
           </div>
         </div>
@@ -146,7 +268,7 @@
             <div class="stats-item">
               <i class="bi bi-emoji-smile"></i>
               <span data-purecounter-start="0" data-purecounter-end="50" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Happy Clients</strong> <span>satisfied customers</span></p>
+              <p><strong>مشتریان راضی</strong> <span>مشتریان خوشنود</span></p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -154,7 +276,7 @@
             <div class="stats-item">
               <i class="bi bi-journal-richtext"></i>
               <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Projects</strong> <span>successfully delivered</span></p>
+              <p><strong>پروژه‌ها</strong> <span>پروژه‌های موفق</span></p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -162,7 +284,7 @@
             <div class="stats-item">
               <i class="bi bi-building"></i>
               <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Companies</strong> <span>working with</span></p>
+              <p><strong>شرکت‌ها</strong> <span>همکاری با</span></p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -170,7 +292,7 @@
             <div class="stats-item">
               <i class="bi bi-calendar-check"></i>
               <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Years Experience</strong> <span>continuous learning</span></p>
+              <p><strong>سال تجربه</strong> <span>یادگیری مستمر</span></p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -185,8 +307,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Technical Skills</h2>
-        <p>My technical expertise spans across multiple platforms and technologies, enabling me to deliver comprehensive solutions</p>
+        <h2>مهارت‌های فنی علی پاکدل نیا</h2>
+        <p>تخصص فنی من در چندین پلتفرم و تکنولوژی گسترش یافته است، که به من امکان ارائه راه‌حل‌های جامع را می‌دهد</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
