add two language to website

--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
-<html lang="fa" dir="rtl">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
   <!-- SEO Meta Tags -->
-  <title>علی پاکدل نیا | برنامه‌نویس فول استک | توسعه‌دهنده اندروید | تهران</title>
-  <meta name="description" content="علی پاکدل نیا - برنامه‌نویس فول استک و توسعه‌دهنده اندروید در تهران. متخصص در .NET Core، Kotlin، React و Angular. ۵ سال تجربه در توسعه نرم‌افزار.">
-  <meta name="keywords" content="علی پاکدل نیا, علی پاکدل, پاکدل نیا, پاکدل, برنامه‌نویس فول استک, توسعه‌دهنده اندروید, برنامه‌نویس تهران, .NET Core, Kotlin, React, Angular, فریلنسر برنامه‌نویس">
-  <meta name="author" content="علی پاکدل نیا">
+  <title>Ali Pakdelnia | Full Stack Developer | Android Developer | Tehran</title>
+  <meta name="description" content="Ali Pakdelnia - Full Stack Developer and Android Developer in Tehran. Expert in .NET Core, Kotlin, React and Angular. 5 years experience in software development.">
+  <meta name="keywords" content="Ali Pakdelnia, علی پاکدل نیا, علی پاکدل, پاکدل نیا, پاکدل, Full Stack Developer, Android Developer, .NET Core, Kotlin, React, Angular, Tehran Developer, Freelance Developer">
+  <meta name="author" content="Ali Pakdelnia">
   <meta name="robots" content="index, follow">
   
   <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="علی پاکدل نیا | برنامه‌نویس فول استک و توسعه‌دهنده اندروید">
-  <meta property="og:description" content="علی پاکدل نیا - برنامه‌نویس فول استک و توسعه‌دهنده اندروید در تهران. متخصص در .NET Core، Kotlin، React و Angular.">
+  <meta property="og:title" content="Ali Pakdelnia | Full Stack Developer and Android Developer">
+  <meta property="og:description" content="Ali Pakdelnia - Full Stack Developer and Android Developer in Tehran. Expert in .NET Core, Kotlin, React and Angular.">
   <meta property="og:image" content="https://alipakdelnia.github.io/assets/img/my-profile-img.jpg">
   <meta property="og:url" content="https://alipakdelnia.github.io/">
   <meta property="og:type" content="website">
-  <meta property="og:locale" content="fa_IR">
+  <meta property="og:locale" content="en_US">
   
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="علی پاکدل نیا | برنامه‌نویس فول استک و توسعه‌دهنده اندروید">
-  <meta name="twitter:description" content="علی پاکدل نیا - برنامه‌نویس فول استک و توسعه‌دهنده اندروید در تهران">
+  <meta name="twitter:title" content="Ali Pakdelnia | Full Stack Developer and Android Developer">
+  <meta name="twitter:description" content="Ali Pakdelnia - Full Stack Developer and Android Developer in Tehran">
   <meta name="twitter:image" content="https://alipakdelnia.github.io/assets/img/my-profile-img.jpg">
   
   <!-- Canonical URL -->
   <link rel="canonical" href="https://alipakdelnia.github.io/">
   
   <!-- Language Alternates -->
-  <link rel="alternate" hreflang="fa" href="https://alipakdelnia.github.io/">
   <link rel="alternate" hreflang="en" href="https://alipakdelnia.github.io/">
+  <link rel="alternate" hreflang="fa" href="https://alipakdelnia.github.io/fa/">
   <link rel="alternate" hreflang="x-default" href="https://alipakdelnia.github.io/">
 
   <!-- PWA Manifest -->
@@ -55,25 +55,49 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-  <link href="assets/css/rtl.css" rel="stylesheet">
+
+  <!-- Language Switcher -->
+  <style>
+    .language-switcher {
+      margin-top: 20px;
+      text-align: center;
+    }
+    .language-switcher a {
+      color: #6c757d;
+      text-decoration: none;
+      margin: 0 5px;
+      padding: 5px 10px;
+      border-radius: 15px;
+      transition: all 0.3s ease;
+      font-size: 0.9rem;
+    }
+    .language-switcher a:hover {
+      background: rgba(0,123,255,0.1);
+      color: #007bff;
+    }
+    .language-switcher a.active {
+      background: #007bff;
+      color: white;
+    }
+  </style>
 
   <!-- Structured Data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "Person",
-    "name": "علی پاکدل نیا",
-    "alternateName": ["Ali Pakdelnia", "علی پاکدل", "پاکدل نیا"],
-    "jobTitle": "برنامه‌نویس فول استک و توسعه‌دهنده اندروید",
-    "description": "علی پاکدل نیا - برنامه‌نویس فول استک و توسعه‌دهنده اندروید در تهران با ۵ سال تجربه در توسعه نرم‌افزار",
+    "name": "Ali Pakdelnia",
+    "alternateName": ["علی پاکدل نیا", "علی پاکدل", "پاکدل نیا"],
+    "jobTitle": "Full Stack Developer and Android Developer",
+    "description": "Ali Pakdelnia - Full Stack Developer and Android Developer in Tehran with 5 years experience in software development",
     "url": "https://alipakdelnia.github.io/",
     "image": "https://alipakdelnia.github.io/assets/img/my-profile-img.jpg",
     "email": "ali.pakdelnia77@gmail.com",
     "telephone": "+989909601225",
     "address": {
       "@type": "PostalAddress",
-      "addressLocality": "تهران",
-      "addressCountry": "ایران"
+      "addressLocality": "Tehran",
+      "addressCountry": "Iran"
     },
     "sameAs": [
       "https://github.com/alipakdelnia",
@@ -111,12 +135,12 @@
   {
     "@context": "https://schema.org",
     "@type": "WebSite",
-    "name": "علی پاکدل نیا - برنامه‌نویس فول استک",
+    "name": "Ali Pakdelnia - Full Stack Developer",
     "url": "https://alipakdelnia.github.io/",
-    "description": "علی پاکدل نیا - برنامه‌نویس فول استک و توسعه‌دهنده اندروید در تهران",
+    "description": "Ali Pakdelnia - Full Stack Developer and Android Developer in Tehran",
     "author": {
       "@type": "Person",
-      "name": "علی پاکدل نیا"
+      "name": "Ali Pakdelnia"
     },
     "potentialAction": {
       "@type": "SearchAction",
@@ -131,10 +155,10 @@
   {
     "@context": "https://schema.org",
     "@type": "Organization",
-    "name": "علی پاکدل نیا - خدمات برنامه‌نویسی",
+    "name": "Ali Pakdelnia - Development Services",
     "url": "https://alipakdelnia.github.io/",
     "logo": "https://alipakdelnia.github.io/assets/img/my-profile-img.jpg",
-    "description": "خدمات برنامه‌نویسی فول استک و توسعه اندروید توسط علی پاکدل نیا",
+    "description": "Full Stack and Android Development Services by Ali Pakdelnia",
     "contactPoint": {
       "@type": "ContactPoint",
       "telephone": "+989909601225",
@@ -143,8 +167,8 @@
     },
     "address": {
       "@type": "PostalAddress",
-      "addressLocality": "تهران",
-      "addressCountry": "ایران"
+      "addressLocality": "Tehran",
+      "addressCountry": "Iran"
     }
   }
   </script>
@@ -164,13 +188,13 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="assets/img/my-profile-img.jpg" alt="علی پاکدل نیا - برنامه‌نویس فول استک" class="img-fluid rounded-circle">
+      <img src="assets/img/my-profile-img.jpg" alt="Ali Pakdelnia - Full Stack Developer" class="img-fluid rounded-circle">
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
       <!-- Uncomment the line below if you also wish to use an image logo -->
       <!-- <img src="assets/img/logo.png" alt=""> -->
-      <h1 class="sitename">علی پاکدل نیا</h1>
+      <h1 class="sitename">Ali Pakdelnia</h1>
     </a>
 
     <div class="social-links text-center">
@@ -179,17 +203,23 @@
       <a href="https://alipakdelnia.github.io" class="globe" target="_blank"><i class="bi bi-globe"></i></a>
     </div>
 
+    <!-- Language Switcher -->
+    <div class="language-switcher">
+      <a href="./" class="lang-en active">English</a>
+      <a href="./fa/" class="lang-fa">فارسی</a>
+    </div>
+
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>خانه</a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i> درباره من</a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> رزومه</a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> نمونه کارها</a></li>
-        <li><a href="#skills"><i class="bi bi-hdd-stack navicon"></i> مهارت‌های فنی</a></li>
-        <li><a href="#soft-skills"><i class="bi bi-people navicon"></i> مهارت‌های نرم</a></li>
-        <li><a href="#languages"><i class="bi bi-translate navicon"></i> زبان‌ها</a></li>
-        <li><a href="#services"><i class="bi bi-gear navicon"></i> خدمات</a></li>
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i> تماس</a></li>
+        <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
+        <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
+        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
+        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
+        <li><a href="#skills"><i class="bi bi-hdd-stack navicon"></i> Technical Skills</a></li>
+        <li><a href="#soft-skills"><i class="bi bi-people navicon"></i> Soft Skills</a></li>
+        <li><a href="#languages"><i class="bi bi-translate navicon"></i> Languages</a></li>
+        <li><a href="#services"><i class="bi bi-gear navicon"></i> Services</a></li>
+        <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
 
@@ -200,11 +230,11 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/hero-bg.jpg" alt="علی پاکدل نیا - برنامه‌نویس فول استک" data-aos="fade-in" class="">
+      <img src="assets/img/hero-bg.jpg" alt="Ali Pakdelnia - Full Stack Developer" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2>علی پاکدل نیا</h2>
-        <p>من یک <span class="typed" data-typed-items="برنامه‌نویس فول استک, توسعه‌دهنده اندروید, برنامه‌نویس .NET, حل‌کننده مشکلات, فریلنسر">برنامه‌نویس فول استک</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <h2>Ali Pakdelnia</h2>
+        <p>I'm a <span class="typed" data-typed-items="Full Stack Developer, Android Developer, .NET Developer, Problem Solver, Freelancer">Full Stack Developer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
@@ -214,41 +244,41 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>درباره علی پاکدل نیا</h2>
-        <p>علی پاکدل نیا - برنامه‌نویس فول استک با تجربه در توسعه اندروید و وب. در حال حاضر با چندین شرکت همکاری می‌کنم و پروژه‌های فریلنسری می‌پذیرم. من در ایجاد راه‌حل‌های جامع در تمام پلتفرم‌ها تخصص دارم.</p>
+        <h2>About</h2>
+        <p>Experienced Full Stack Developer with expertise in both Android and web development. Currently working with multiple companies and accepting freelance projects. I specialize in creating comprehensive solutions across all platforms.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/my-profile-img.jpg" class="img-fluid" alt="علی پاکدل نیا - برنامه‌نویس فول استک تهران">
+            <img src="assets/img/my-profile-img.jpg" class="img-fluid" alt="Ali Pakdelnia - Full Stack Developer Tehran">
           </div>
           <div class="col-lg-8 content">
-            <h2>برنامه‌نویس فول استک و متخصص اندروید</h2>
+            <h2>Full Stack Developer &amp; Android Specialist</h2>
             <p class="fst-italic py-3">
-              علی پاکدل نیا - برنامه‌نویس فول استک با تجربه که با چندین شرکت همکاری می‌کند و پروژه‌های فریلنسری می‌پذیرد. مهارت قوی در توسعه وب و موبایل، ایجاد راه‌حل‌های جامع در تمام پلتفرم‌ها.
+              Experienced Full Stack Developer working with multiple companies and accepting freelance projects. Strong proficiency in both web and mobile development, creating comprehensive solutions across all platforms.
             </p>
             <div class="row">
                           <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>سن:</strong> <span>۲۶</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>ایمیل:</strong> <span>ali.pakdelnia77@gmail.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>تلفن:</strong> <span>+989909601225</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>موقعیت:</strong> <span>تهران، ایران</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>26</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>ali.pakdelnia77@gmail.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+989909601225</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>Tehran, Iran</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>وب‌سایت:</strong> <span>alipakdelnia.github.io</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>alipakdelnia.github.io</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>GitHub:</strong> <span>github.com/alipakdelnia</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn:</strong> <span>linkedin.com/in/ali-pakdelnia</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>وضعیت:</strong> <span>در دسترس برای فریلنسری</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Status:</strong> <span>Freelance Available</span></li>
               </ul>
             </div>
             </div>
                           <p class="py-3">
-                علی پاکدل نیا با پیشینه مهندسی مکاترونیک و تجربه گسترده در توسعه نرم‌افزار، رویکردی جامع برای ایجاد راه‌حل‌های کامل ارائه می‌دهد. در حال حاضر به عنوان برنامه‌نویس فول استک با چندین شرکت همکاری می‌کنم و در پروژه‌های متنوع وب و موبایل مشارکت داشته‌ام، مهارت‌های حل مسئله را بهبود داده‌ام و تخصص در توسعه فرانت‌اند و بک‌اند را پرورش داده‌ام.
+                With a background in mechatronics engineering and extensive experience in software development, I bring a holistic approach to creating comprehensive solutions. Currently working as a Full Stack Developer with multiple companies, I have collaborated on diverse projects across web and mobile platforms, refining my problem-solving skills and cultivating expertise in both frontend and backend development.
               </p>
           </div>
         </div>
@@ -268,7 +298,7 @@
             <div class="stats-item">
               <i class="bi bi-emoji-smile"></i>
               <span data-purecounter-start="0" data-purecounter-end="50" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>مشتریان راضی</strong> <span>مشتریان خوشنود</span></p>
+              <p><strong>Happy Clients</strong> <span>satisfied customers</span></p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -276,7 +306,7 @@
             <div class="stats-item">
               <i class="bi bi-journal-richtext"></i>
               <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>پروژه‌ها</strong> <span>پروژه‌های موفق</span></p>
+              <p><strong>Projects</strong> <span>successfully delivered</span></p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -284,7 +314,7 @@
             <div class="stats-item">
               <i class="bi bi-building"></i>
               <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>شرکت‌ها</strong> <span>همکاری با</span></p>
+              <p><strong>Companies</strong> <span>working with</span></p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -292,7 +322,7 @@
             <div class="stats-item">
               <i class="bi bi-calendar-check"></i>
               <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>سال تجربه</strong> <span>یادگیری مستمر</span></p>
+              <p><strong>Years Experience</strong> <span>continuous learning</span></p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -307,8 +337,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>مهارت‌های فنی علی پاکدل نیا</h2>
-        <p>تخصص فنی من در چندین پلتفرم و تکنولوژی گسترش یافته است، که به من امکان ارائه راه‌حل‌های جامع را می‌دهد</p>
+        <h2>Technical Skills</h2>
+        <p>My technical expertise spans across multiple platforms and technologies, enabling me to deliver comprehensive solutions</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
